--- a/MuoiCu_Server/views/exportsuachua.handlebars
+++ b/MuoiCu_Server/views/exportsuachua.handlebars
@@ -20,13 +20,15 @@
     .mahoadon {
       position: absolute;
       left: 1060px;
-      top: 129px;
+      top: 120px;
+      font-size: 30px;
     }
 
     .tenkh {
       position: absolute;
       top: 230px;
-      left: 120px;
+      left: 130px;
+      font-size: 20px;
       max-width: 280px;
     }
 
@@ -57,14 +59,14 @@
 
     .sokhung {
       position: absolute;
-      left: 472px;
+      left: 480px;
       top: 288px;
     }
 
     .somay {
       position: absolute;
       top: 316px;
-      left: 456px;
+      left: 480px;
     }
 
     .sokm {
