--- a/MuoiCu_Server/views/exportsuachua.handlebars
+++ b/MuoiCu_Server/views/exportsuachua.handlebars
@@ -190,14 +190,14 @@
       left: 160px;
       max-width: 181px;
       min-width: 181px;
-      text-align: center;
+      text-align: left;
     }
 
     .mapt {
       left: 342px;
       max-width: 175px;
       min-width: 175px;
-      text-align: center;
+      text-align: left;
     }
 
     .dongia {
