--- a/MuoiCu_Server/views/exportsuachua.handlebars
+++ b/MuoiCu_Server/views/exportsuachua.handlebars
@@ -266,7 +266,7 @@
   <div class="cell mapt row-{{@index}}">{{maphutung}}</div>
   <div class="cell dongia row-{{@index}}">{{dongia}}</div>
   <div class="cell sl row-{{@index}}">{{soluongphutung}}</div>
-  <div class="cell tienpt row-{{@index}}">{{tinhtien dongia soluongphutung}}</div>
+  <div class="cell tienpt row-{{@index}}">{{tinhtien}}</div>
   <div class="cell tiencong row-{{@index}}">{{tiencong}}</div>
   <div class="cell tong row-{{@index}}">{{tongtien}}</div>
   {{/each}}
