update bill sua chua

--- a/MuoiCu_Server/views/exportsuachua.handlebars
+++ b/MuoiCu_Server/views/exportsuachua.handlebars
@@ -3,13 +3,13 @@
 <head>
   <title>Xuất phiếu sửa chữa</title>
   <style>
-    body {
-      padding: 0;
-      margin: 0;
+    @page {
+      size: 21cm 29.7cm;
     }
 
-    img {
-      width: 100vw;
+    .whater {
+      height: 100%;
+      width: 100%;
       position: absolute;
     }
 
@@ -19,89 +19,88 @@
 
     .mahoadon {
       position: absolute;
-      left: 1060px;
-      top: 120px;
+      left: 930px;
+      top: 75px;
       font-size: 30px;
     }
 
     .tenkh {
       position: absolute;
-      top: 230px;
-      left: 130px;
+      top: 180px;
+      left: 100px;
       font-size: 20px;
       max-width: 280px;
     }
 
     .diachi {
       position: absolute;
-      top: 225px;
-      left: 450px;
-      max-width: 400px;
-    }
-
-    .loaixe {
-      position: absolute;
-      left: 172px;
-      top: 289px;
-    }
-
-    .bienso {
-      position: absolute;
-      left: 172px;
-      top: 317px;
+      top: 180px;
+      left: 350px;
+      max-width: 350px;
     }
 
     .sdt {
       position: absolute;
-      left: 208px;
-      top: 261px;
+      left: 160px;
+      top: 217px;
+    }
+
+    .loaixe {
+      position: absolute;
+      left: 160px;
+      top: 250px;
+    }
+
+    .bienso {
+      position: absolute;
+      left: 160px;
+      top: 287px;
     }
 
     .sokhung {
       position: absolute;
-      left: 480px;
-      top: 288px;
+      left: 415px;
+      top: 245px;
     }
 
     .somay {
       position: absolute;
-      top: 316px;
-      left: 480px;
+      left: 415px;
+      top: 287px;
     }
 
     .sokm {
       position: absolute;
-      top: 288px;
-      left: 866px;
+      top: 250px;
+      left: 755px;
     }
 
     .ngayban {
       position: absolute;
-      top: 210px;
-      left: 970px;
+      top: 166px;
+      left: 870px;
     }
 
     .ngaythanhtoan {
       position: absolute;
-      top: 260px;
-      left: 970px;
+      top: 217px;
+      left: 870px;
     }
 
     .yeucaukhachhang {
       position: absolute;
-      top: 387px;
-      left: 132px;
-      max-width: 460px;
-      min-width: 460px;
+      top: 363px;
+      left: 90px;
+      max-width: 450px;
+      min-width: 450px;
     }
 
     .tuvansuachua {
       position: absolute;
-      top: 385px;
-      left: 632px;
-      max-width: 420px;
-      min-width: 420px;
-
+      top: 363px;
+      left: 550px;
+      max-width: 415px;
+      min-width: 415px;
     }
 
     .cell {
@@ -113,91 +112,91 @@
     }
 
     .row-0 {
-      top: calc(740px + 0px);
+      top: calc(720px + 0px);
     }
 
     .row-1 {
-      top: calc(740px + 28px);
+      top: calc(720px + 28px);
     }
 
     .row-2 {
-      top: calc(740px + 2 * 28px);
+      top: calc(720px + 2 * 28px);
     }
 
     .row-3 {
-      top: calc(740px + 3 * 28px);
+      top: calc(720px + 3 * 28px);
     }
 
     .row-4 {
-      top: calc(740px + 4 * 28px);
+      top: calc(720px + 4 * 28px);
     }
 
     .row-5 {
-      top: calc(740px + 5 * 28px);
+      top: calc(720px + 5 * 28px);
     }
 
     .row-6 {
-      top: calc(740px + 6 * 28px);
+      top: calc(720px + 6 * 28px);
     }
 
     .row-7 {
-      top: calc(740px + 7 * 28px);
+      top: calc(720px + 7 * 28px);
     }
 
     .row-8 {
-      top: calc(740px + 8 * 28px);
+      top: calc(720px + 8 * 28px);
     }
 
     .row-9 {
-      top: calc(740px + 9 * 28px);
+      top: calc(720px + 9 * 28px);
     }
 
     .row-10 {
-      top: calc(740px + 10 * 28px);
+      top: calc(720px + 10 * 28px);
     }
 
     .row-11 {
-      top: calc(740px + 11 * 28px);
+      top: calc(720px + 11 * 28px);
     }
 
     .row-12 {
-      top: calc(740px + 12 * 28px);
+      top: calc(720px + 12 * 28px);
     }
 
     .row-13 {
-      top: calc(740px + 13 * 28px);
+      top: calc(720px + 13 * 28px);
     }
 
     .row-14 {
-      top: calc(740px + 14 * 28px);
+      top: calc(720px + 14 * 28px);
     }
 
     .row-15 {
-      top: calc(740px + 15 * 28px);
+      top: calc(720px + 15 * 28px);
     }
 
     .row-16 {
-      top: calc(740px + 16 * 28px);
+      top: calc(720px + 16 * 28px);
     }
 
     .row-17 {
-      top: calc(740px + 17 * 28px);
+      top: calc(720px + 17 * 28px);
     }
 
     .row-18 {
-      top: calc(740px + 18 * 28px);
+      top: calc(720px + 18 * 28px);
     }
 
     .row-19 {
-      top: calc(740px + 19 * 28px);
+      top: calc(720px + 19 * 28px);
     }
 
     .row-20 {
-      top: calc(740px + 560px);
+      top: calc(720px + 560px);
     }
 
     .ten {
-      left: 160px;
+      left: 120px;
       max-width: 181px;
       min-width: 181px;
       text-align: left;
@@ -205,42 +204,48 @@
     }
 
     .mapt {
-      left: 350px;
+      left: 310px;
       max-width: 175px;
       min-width: 175px;
       text-align: left;
     }
 
     .dongia {
-      left: 500px;
+      left: 430px;
       max-width: 145px;
       min-width: 145px;
       text-align: right;
     }
 
     .sl {
-      left: 666px;
+      left: 590px;
       text-align: center;
       min-width: 32px;
       max-width: 32px;
     }
 
     .tienpt {
-      left: 710px;
+      left: 610px;
       min-width: 150px;
       max-width: 150px;
       text-align: right;
     }
 
     .tiencong {
-      left: 882px;
+      left: 782px;
       min-width: 160px;
       max-width: 150px;
       text-align: right;
     }
 
     .tong {
-      left: 1067px;
+      left: 945px;
+      min-width: 160px;
+      max-width: 160px;
+      text-align: right;
+    }
+    .tongTest {
+      left: 1117px;
       min-width: 160px;
       max-width: 160px;
       text-align: right;
@@ -249,7 +254,7 @@
 </head>
 
 <body>
-  <img src='/mausuachua.jpg' />
+  <img src='/mautest.png' class="whater" />
 
   <div class='mahoadon'>{{mahoadon }}</div>
   <div class='tenkh'>{{tenkh}}</div>
@@ -274,6 +279,7 @@
   <div class="cell tienpt row-{{@index}}">{{tinhtien}}</div>
   <div class="cell tiencong row-{{@index}}">{{tiencong}}</div>
   <div class="cell tong row-{{@index}}">{{tongtien}}</div>
+  <div class="cell tongTest row-{{@index}}">{{tongtongtien}}</div>
   {{/each}}
 
 
@@ -282,6 +288,7 @@
   <div class="cell row-20 tienpt">{{tongtienpt}}</div>
   <div class="cell row-20 tiencong">{{tongtiencong}}</div>
   <div class="cell row-20 tong">{{tongtongtien}}</div>
+  <div class="cell row-20 tongTest">{{tongtongtien}}</div>
 
   <script>
     function format_momey(name) {
