--- a/MuoiCu_Server/views/exportle.handlebars
+++ b/MuoiCu_Server/views/exportle.handlebars
@@ -14,7 +14,7 @@
     }
 
     div {
-      font-size: 15px;
+      font-size: 12px;
     }
 
     .mahoadon {
@@ -26,53 +26,47 @@
 
     .tenkh {
       position: absolute;
-      top: 308px;
+      top: 313px;
       left: 200px;
-      font-size: 20px;
       max-width: 280px;
     }
 
     .diachi {
       position: absolute;
-      top: 340px;
-      left: 130px;
+      top: 342px;
+      left: 125px;
       max-width: 350px;
     }
 
     .sdt {
       position: absolute;
       left: 440px;
-      font-size: 20px;
-      top: 335px;
+      top: 342px;
     }
 
     .manv {
       position: absolute;
-      top: 365px;
+      top: 372px;
       left: 200px;
-      font-size: 20px;
       max-width: 280px;
     }
 
 
     #ngaythanhtoan {
       position: absolute;
-      top: 275px;
-      font-size: 20px;
+      top: 280px;
       left: 320px;
     }
 
     #thangthanhtoan {
       position: absolute;
-      top: 275px;
-      font-size: 20px;
+      top: 280px;
       left: 410px;
     }
 
     #namthanhtoan {
       position: absolute;
-      top: 275px;
-      font-size: 20px;
+      top: 280px;
       left: 475px;
     }
 
@@ -86,86 +80,136 @@
     }
 
     .row-0 {
-      top: calc(430px + 0px);
+      top: calc(432px + 0 * 16px);
     }
 
     .row-1 {
-      top: calc(430px + 15px);
+      top: calc(432px + 1 * 16px);
     }
 
     .row-2 {
-      top: calc(430px + 2 * 15px);
+      top: calc(432px + 2 * 16px);
     }
 
     .row-3 {
-      top: calc(430px + 3 * 15px);
+      top: calc(432px + 3 * 16px);
     }
 
     .row-4 {
-      top: calc(432px + 4 * 15px);
+      top: calc(430px + 4 * 16px);
     }
 
     .row-5 {
-      top: calc(434px + 5 * 15px);
+      top: calc(430px + 5 * 16px);
     }
 
     .row-6 {
-      top: calc(434px + 6 * 15px);
+      top: calc(430px + 6 * 16px);
     }
 
     .row-7 {
-      top: calc(435px + 7 * 15px);
+      top: calc(430px + 7 * 16px);
     }
 
     .row-8 {
-      top: calc(435px + 8 * 15px);
+      top: calc(428px + 8 * 16px);
     }
 
     .row-9 {
-      top: calc(435px + 9 * 15px);
+      top: calc(428px + 9 * 16px);
     }
 
     .row-10 {
-      top: calc(435px + 10 * 15px);
+      top: calc(428px + 10 * 16px);
     }
 
     .row-11 {
-      top: calc(435px + 11 * 15px);
+      top: calc(426px + 11 * 16px);
     }
 
     .row-12 {
-      top: calc(435px + 12 * 15px);
+      top: calc(426px + 12 * 16px);
     }
 
     .row-13 {
-      top: calc(435px + 13 * 15px);
+      top: calc(426px + 13 * 16px);
     }
 
     .row-14 {
-      top: calc(438px + 14 * 15px);
+      top: calc(424px + 14 * 16px);
     }
 
     .row-15 {
-      top: calc(438px + 15 * 15px);
+      top: calc(424px + 15 * 16px);
     }
 
     .row-16 {
-      top: calc(438px + 16 * 15px);
+      top: calc(424px + 16 * 16px);
     }
 
     .row-17 {
-      top: calc(438px + 17 * 15px);
+      top: calc(422px + 17 * 16px);
     }
 
     .row-18 {
-      top: calc(438px + 18 * 15px);
+      top: calc(422px + 18 * 16px);
     }
 
     .row-19 {
-      top: calc(438px + 19 * 15px);
+      top: calc(422px + 19 * 16px);
+    }
+    
+    .row-20 {
+      top: calc(422px + 20 * 16px);
+    }
+    
+    .row-21 {
+      top: calc(420px + 21 * 16px);
+    }
+    
+    .row-22 {
+      top: calc(420px + 22 * 16px);
+    }  
+
+    .row-23 {
+      top: calc(420px + 23 * 16px);
+    }
+    
+    .row-24 {
+      top: calc(420px + 24 * 16px);
     }
 
-    .row-20 {
+    .row-25 {
+      top: calc(420px + 25 * 16px);
+    } 
+
+    .row-26 {
+      top: calc(420px + 26 * 16px);
+    }
+
+    .row-27 {
+      top: calc(418px + 27 * 16px);
+    }
+
+    .row-28 {
+      top: calc(418px + 28 * 16px);
+    }
+    .row-29 {
+      top: calc(420px + 29 * 16px);
+    }
+    .row-30 {
+      top: calc(422px + 30 * 16px);
+    }
+    .row-31 {
+      top: calc(424px + 31 * 16px);
+    }
+    .row-32 {
+      top: calc(426px + 32 * 16px);
+    }
+    .row-33 {
+      top: calc(430px + 33 * 16px);
+    }
+    .row-tongtien {
       top: calc(430px + 560px);
     }
 
@@ -188,7 +232,6 @@
       max-width: 165px;
       min-width: 165px;
       text-align: left;
-      font-size: 12px;
     }
 
     .sl {
@@ -199,7 +242,7 @@
     }
 
     .dongia {
-      left: 463px;
+      left: 456px;
       max-width: 95px;
       min-width: 95px;
       text-align: right;
@@ -213,17 +256,18 @@
     }
 
     .tong {
-      left: 630px;
+      left: 623px;
       min-width: 95px;
       max-width: 95px;
       text-align: right;
     }
 
     .tongtien {
-      left: 630px;
+      left: 615px;
       min-width: 85px;
       max-width: 85px;
       text-align: right;
+      font-size: 20px;
     }
   </style>
 </head>
@@ -256,7 +300,7 @@
 
 
 
-  <div class="cell row-20 tongtien">{{tongtien}}</div>
+  <b><div class="cell row-tongtien tongtien">{{tongtien}}</div></b>
 
   <script>
     function format_momey(name) {
