--- a/MuoiCu_Server/views/exportle.handlebars
+++ b/MuoiCu_Server/views/exportle.handlebars
@@ -293,7 +293,7 @@
   <div class="cell ten row-{{@index}} row-ten">{{tenphutung}}</div>
   <div class="cell sl row-{{@index}}">{{soluong}}</div>
   <div class="cell dongia row-{{@index}}">{{dongia}}</div>
-  <div class="cell chietkhau row-{{@index}}">{{chietkhau}}</div>
+  <div class="cell chietkhau row-{{@index}}">{{chietkhau}} %</div>
   <div class="cell tong row-{{@index}}">{{tongtien}}</div>
   {{/each}}
 
