--- a/MuoiCu_Server/views/exportle.handlebars
+++ b/MuoiCu_Server/views/exportle.handlebars
@@ -279,7 +279,7 @@
   <div class='tenkh'>{{tenkh}}</div>
   <div class="diachi">{{diachi}}</div>
   <div class="sdt">{{sodienthoai}}</div>
-  <div class="manv">{{manv}}</div>
+  <div class="manv">{{tennv}}</div>
 
 
   <div id="thanhtoan" style="display: none;">{{ngaythanhtoan}}</div>
