upate chietkhau cho phieu sua chua

--- a/MuoiCu_Server/views/exportsuachua.handlebars
+++ b/MuoiCu_Server/views/exportsuachua.handlebars
@@ -19,14 +19,14 @@
 
     .mahoadon {
       position: absolute;
-      left: 930px;
-      top: 75px;
+      left: 940px;
+      top: 85px;
       font-size: 30px;
     }
 
     .tenkh {
       position: absolute;
-      top: 185px;
+      top: 195px;
       left: 100px;
       font-size: 20px;
       max-width: 280px;
@@ -34,7 +34,7 @@
 
     .diachi {
       position: absolute;
-      top: 185px;
+      top: 190px;
       left: 350px;
       max-width: 350px;
     }
@@ -42,63 +42,63 @@
     .sdt {
       position: absolute;
       left: 160px;
-      top: 217px;
+      top: 225px;
     }
 
     .loaixe {
       position: absolute;
       left: 160px;
-      top: 250px;
+      top: 255px;
     }
 
     .bienso {
       position: absolute;
       left: 160px;
-      top: 287px;
+      top: 283px;
     }
 
     .sokhung {
       position: absolute;
       left: 415px;
-      top: 245px;
+      top: 254px;
     }
 
     .somay {
       position: absolute;
       left: 415px;
-      top: 287px;
+      top: 280px;
     }
 
     .sokm {
       position: absolute;
-      top: 250px;
+      top: 255px;
       left: 755px;
     }
 
     .ngayban {
       position: absolute;
-      top: 166px;
+      top: 175px;
       left: 870px;
     }
 
     .ngaythanhtoan {
       position: absolute;
-      top: 217px;
+      top: 225px;
       left: 870px;
     }
 
     .yeucaukhachhang {
       position: absolute;
-      top: 363px;
-      left: 90px;
+      top: 345px;
+      left: 85px;
       max-width: 450px;
       min-width: 450px;
     }
 
     .tuvansuachua {
       position: absolute;
-      top: 363px;
-      left: 550px;
+      top: 345px;
+      left: 545px;
       max-width: 415px;
       min-width: 415px;
     }
@@ -112,87 +112,87 @@
     }
 
     .row-0 {
-      top: calc(720px + 0px);
+      top: calc(715px + 4px);
     }
 
     .row-1 {
-      top: calc(720px + 28px);
+      top: calc(715px + 28px);
     }
 
     .row-2 {
-      top: calc(720px + 2 * 28px);
+      top: calc(715px + 2 * 28px);
     }
 
     .row-3 {
-      top: calc(720px + 3 * 28px);
+      top: calc(715px + 3 * 28px);
     }
 
     .row-4 {
-      top: calc(720px + 4 * 28px);
+      top: calc(715px + 4 * 28px);
     }
 
     .row-5 {
-      top: calc(720px + 5 * 28px);
+      top: calc(715px + 5 * 28px);
     }
 
     .row-6 {
-      top: calc(720px + 6 * 28px);
+      top: calc(715px + 6 * 28px);
     }
 
     .row-7 {
-      top: calc(720px + 7 * 28px);
+      top: calc(715px + 7 * 28px);
     }
 
     .row-8 {
-      top: calc(720px + 8 * 28px);
+      top: calc(715px + 8 * 28px);
     }
 
     .row-9 {
-      top: calc(720px + 9 * 28px);
+      top: calc(715px + 9 * 28px);
     }
 
     .row-10 {
-      top: calc(720px + 10 * 28px);
+      top: calc(715px + 10 * 28px);
     }
 
     .row-11 {
-      top: calc(720px + 11 * 28px);
+      top: calc(715px + 11 * 28px);
     }
 
     .row-12 {
-      top: calc(720px + 12 * 28px);
+      top: calc(715px + 12 * 28px);
     }
 
     .row-13 {
-      top: calc(720px + 13 * 28px);
+      top: calc(715px + 13 * 28px);
     }
 
     .row-14 {
-      top: calc(720px + 14 * 28px);
+      top: calc(715px + 14 * 28px);
     }
 
     .row-15 {
-      top: calc(720px + 15 * 28px);
+      top: calc(715px + 15 * 28px);
     }
 
     .row-16 {
-      top: calc(720px + 16 * 28px);
+      top: calc(715px + 16 * 28px);
     }
 
     .row-17 {
-      top: calc(720px + 17 * 28px);
+      top: calc(715px + 17 * 28px);
     }
 
     .row-18 {
-      top: calc(720px + 18 * 28px);
+      top: calc(715px + 18 * 28px);
     }
 
     .row-19 {
-      top: calc(720px + 19 * 28px);
+      top: calc(715px + 19 * 28px);
     }
 
     .row-20 {
-      top: calc(720px + 560px);
+      top: calc(715px + 555px);
     }
 
     .ten {
@@ -211,21 +211,28 @@
     }
 
     .dongia {
-      left: 430px;
+      left: 410px;
       max-width: 145px;
       min-width: 145px;
       text-align: right;
     }
 
     .sl {
-      left: 590px;
+      left: 575px;
       text-align: center;
       min-width: 32px;
       max-width: 32px;
     }
 
+    .chietkhau {
+      left: 630px;
+      min-width: 50px;
+      max-width: 50px;
+      text-align: right;
+    }
+
     .tienpt {
-      left: 610px;
+      left: 645px;
       min-width: 150px;
       max-width: 150px;
       text-align: right;
@@ -254,7 +261,7 @@
 </head>
 
 <body>
-  <img src='/mautest.png' class="whater" />
+  <img src='/phieusuachua.png' class="whater" />
 
   <div class='mahoadon'>{{mahoadon }}</div>
   <div class='tenkh'>{{tenkh}}</div>
@@ -276,6 +283,7 @@
   <div class="cell mapt row-{{@index}}">{{maphutung}}</div>
   <div class="cell dongia row-{{@index}}">{{dongia}}</div>
   <div class="cell sl row-{{@index}}">{{soluongphutung}}</div>
+  <div class="cell chietkhau row-{{@index}}">{{chietkhau}} %</div>
   <div class="cell tienpt row-{{@index}}">{{tinhtien}}</div>
   <div class="cell tiencong row-{{@index}}">{{tiencong}}</div>
   <div class="cell tong row-{{@index}}">{{tongtien}}</div>
