--- a/MuoiCu_Server/views/exportsuachua.handlebars
+++ b/MuoiCu_Server/views/exportsuachua.handlebars
@@ -318,7 +318,7 @@
   <div class="cell dongia row-{{@index}}">{{dongia}}</div>
   <div class="cell sl row-{{@index}}">{{soluongphutung}}</div>
   <div class="cell chietkhau row-{{@index}}">{{chietkhau}} %</div>
-  <div class="cell tienpt row-{{@index}}">{{tinhtien}}</div>
+  <div class="cell tienpt row-{{@index}}">{{tienpt}}</div>
   <div class="cell tiencong row-{{@index}}">{{tiencong}}</div>
   <div class="cell tong row-{{@index}}">{{tongtien}}</div>
   <div class="cell tongTest row-{{@index}}">{{tongtongtien}}</div>
