--- a/MuoiCu_Server/views/exportsuachua.handlebars
+++ b/MuoiCu_Server/views/exportsuachua.handlebars
@@ -16,95 +16,125 @@
     div {
       font-size: 16px;
     }
+    
+    .overflow {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      text-align: center;
+      vertical-align: middle;
+    }
+
+    .flex {
+      white-space: normal;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
 
     .mahoadon {
       position: absolute;
-      left: 940px;
-      top: 85px;
+      left: 800px;
+      top: 44px;
       font-size: 30px;
+      width: 260px;
     }
 
     .tenkh {
       position: absolute;
-      top: 195px;
-      left: 100px;
+      top: 146px;
+      left: 54px;
       font-size: 20px;
-      max-width: 280px;
+      width: 242px;
     }
 
     .diachi {
       position: absolute;
-      top: 195px;
-      left: 350px;
-      max-width: 350px;
+      top: 130px;
+      left: 300px;
+      width: 340px;
+      height: 60px;
     }
 
     .sdt {
       position: absolute;
-      left: 160px;
-      top: 225px;
+      left: 130px;
+      top: 176px;
+      width: 160px;
     }
 
     .loaixe {
       position: absolute;
-      left: 160px;
-      top: 255px;
+      left: 110px;
+      top: 202px;
+      width: 180px;
     }
 
     .bienso {
       position: absolute;
-      left: 160px;
-      top: 283px;
+      left: 110px;
+      top: 228px;
+      width: 180px;
     }
 
     .sokhung {
       position: absolute;
-      left: 415px;
-      top: 254px;
+      left: 360px;
+      top: 202px;
+      width: 270px;
     }
 
     .somay {
       position: absolute;
-      left: 415px;
-      top: 280px;
+      left: 360px;
+      top: 228px;
+      width: 270px;
     }
 
     .sokm {
       position: absolute;
-      top: 255px;
-      left: 755px;
+      top: 202px;
+      left: 690px;
+      width: 150px;
     }
 
     .ngayban {
       position: absolute;
-      top: 175px;
-      left: 870px;
+      top: 130px;
+      left: 780px;
+      width: 200px;
     }
 
     .ngaythanhtoan {
       position: absolute;
-      top: 225px;
-      left: 870px;
+      top: 176px;
+      left: 780px;
+      width: 200px;
     }
 
     .yeucaukhachhang {
       position: absolute;
-      top: 345px;
-      left: 85px;
-      max-width: 450px;
-      min-width: 450px;
+      top: 288px;
+      left: 56px;
+      width: 416px;
+      height: 78px; 
+      white-space: normal;
     }
 
     .tuvansuachua {
       position: absolute;
-      top: 345px;
-      left: 545px;
-      max-width: 415px;
-      min-width: 415px;
+      top: 288px;
+      left: 482px;
+      width: 382px;
+      height: 78px; 
+      white-space: normal;
     }
 
     .cell {
       position: absolute;
+      height: 24px;
+      line-height: 12px;
+      justify-content: flex-end;
     }
 
     .row-ten {
@@ -112,183 +142,156 @@
     }
 
     .row-0 {
-      top: calc(715px + 4px);
+      top: calc(623px + 0 * 26px + 2px );
     }
 
     .row-1 {
-      top: calc(715px + 28px);
+      top: calc(623px + 1 * 26px + 2px);
     }
 
     .row-2 {
-      top: calc(715px + 2 * 28px);
+      top: calc(623px + 2 * 26px + 2px);
     }
 
     .row-3 {
-      top: calc(715px + 3 * 28px);
+      top: calc(623px + 3 * 26px + 2px);
     }
 
     .row-4 {
-      top: calc(715px + 4 * 28px);
+      top: calc(623px + 4 * 26px + 2px);
     }
 
     .row-5 {
-      top: calc(715px + 5 * 28px);
+      top: calc(623px + 5 * 26px + 2px);
     }
 
     .row-6 {
-      top: calc(715px + 6 * 28px);
+      top: calc(623px + 6 * 26px + 2px);
     }
 
     .row-7 {
-      top: calc(715px + 7 * 28px);
+      top: calc(623px + 7 * 26px + 2px);
     }
 
     .row-8 {
-      top: calc(715px + 8 * 28px);
+      top: calc(623px + 8 * 26px + 2px);
     }
 
     .row-9 {
-      top: calc(715px + 9 * 28px);
+      top: calc(623px + 9 * 26px + 2px);
     }
 
     .row-10 {
-      top: calc(715px + 10 * 28px);
+      top: calc(623px + 10 * 26px + 2px);
     }
 
     .row-11 {
-      top: calc(715px + 11 * 28px);
+      top: calc(623px + 11 * 26px + 2px);
     }
 
     .row-12 {
-      top: calc(715px + 12 * 28px);
+      top: calc(623px + 12 * 26px + 2px);
     }
 
     .row-13 {
-      top: calc(715px + 13 * 28px);
+      top: calc(623px + 13 * 26px + 2px);
     }
 
     .row-14 {
-      top: calc(715px + 14 * 28px);
+      top: calc(623px + 14 * 26px + 2px);
     }
 
     .row-15 {
-      top: calc(715px + 15 * 28px);
+      top: calc(623px + 15 * 26px + 2px);
     }
 
     .row-16 {
-      top: calc(715px + 16 * 28px);
+      top: calc(623px + 16 * 26px + 2px);
     }
 
     .row-17 {
-      top: calc(715px + 17 * 28px);
+      top: calc(623px + 17 * 26px + 2px);
     }
 
     .row-18 {
-      top: calc(715px + 18 * 28px);
+      top: calc(623px + 18 * 26px + 2px);
     }
 
     .row-19 {
-      top: calc(715px + 19 * 28px);
+      top: calc(623px + 19 * 26px + 2px);
     }
 
     .row-20 {
-      top: calc(715px + 555px);
+      top: calc(623px + 20 * 26px + 2px);
     }
 
     .ten {
-      left: 120px;
-      max-width: 181px;
-      min-width: 181px;
-      text-align: left;
-      font-size: 13px;
+      left: 88px;
+      width: 155px;
+      font-size: 12px;
+      justify-content: flex-start;
     }
 
     .mapt {
-      left: 310px;
-      max-width: 175px;
-      min-width: 175px;
-      text-align: left;
+      left: 244px;
+      width: 150px;
+      justify-content: center;
     }
 
     .dongia {
-      left: 410px;
-      max-width: 145px;
-      min-width: 145px;
-      text-align: right;
+      left: 394px;
+      width: 100px;
     }
 
     .sl {
-      left: 575px;
-      text-align: center;
-      min-width: 32px;
-      max-width: 32px;
+      left: 508px;
+      width: 26px;
     }
 
     .chietkhau {
-      left: 630px;
-      min-width: 50px;
-      max-width: 50px;
-      text-align: right;
+      left: 560px;
+      width: 50px;
     }
 
     .tienpt {
-      left: 645px;
-      min-width: 150px;
-      max-width: 150px;
-      text-align: right;
+      left: 625px;
+      width: 94px;
     }
 
     .tiencong {
-      left: 782px;
-      min-width: 160px;
-      max-width: 150px;
-      text-align: right;
+      left: 740px;
+      width: 110px;
     }
 
     .tong {
-      left: 945px;
-      min-width: 160px;
-      max-width: 160px;
-      text-align: right;
-    }
-
-    .tongTest {
-      left: 1117px;
-      min-width: 160px;
-      max-width: 160px;
-      text-align: right;
+      left: 870px;
+      width: 138px;
     }
 
     .tennvsuachua {
       position: absolute;
-      top: 1450px;
-      left: 880px;
-      min-width: 120px;
-      max-width: 120px;
-      height: 78px;
+      top: 1320px;
+      left: 800px;
+      width: 100px;
+      height: 65px;
       font-size: 22px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
     }
 
     .kiemtralantoi {
       position: absolute;
-      top: 1357px;
-      left: 530px;
-      text-align: center;
-      min-width: 250px;
-      max-width: 250px;
+      top: 1228px;
+      left: 460px;
+      width: 242px;
+      height: 30px;
       font-size: 22px;
     }
 
     .ngayhen {
       position: absolute;
-      top: 1357px;
-      left: 790px;
-      text-align: center;
-      min-width: 160px;
-      max-width: 160px;
+      top: 1228px;
+      left: 710px;
+      width: 156px;
+      height: 30px;
       font-size: 22px;
     }
   </style>
@@ -297,44 +300,40 @@
 <body>
   <img src='/phieusuachua.png' class="whater" />
 
-  <div class='mahoadon'>{{mahoadon }}</div>
-  <div class='tenkh'>{{tenkh}}</div>
-  <div class="diachi">{{diachi}}</div>
-  <div class="sdt">{{sodienthoai}}</div>
-  <div class="loaixe">{{loaixe}}</div>
-  <div class="sokhung">{{sokhung}}</div>
-  <div class="bienso">{{biensoxe}}</div>
-  <div class="somay">{{somay}}</div>
-  <div class="sokm">{{sokm}}</div>
-  <div class="ngayban">{{ngayban}}</div>
-  <div class="ngaythanhtoan">{{ngaythanhtoan}}</div>
+  <div class='mahoadon overflow'>{{mahoadon }}</div>
+  <div class='tenkh overflow'>{{tenkh}}</div>
+  <div class="diachi overflow flex">{{diachi}}</div>
+  <div class="sdt overflow">{{sodienthoai}}</div>
+  <div class="loaixe overflow">{{loaixe}}</div>
+  <div class="sokhung overflow">{{sokhung}}</div>
+  <div class="bienso overflow">{{biensoxe}}</div>
+  <div class="somay overflow">{{somay}}</div>
+  <div class="sokm overflow">{{sokm}}</div>
+  <div class="ngayban overflow">{{ngayban}}</div>
+  <div class="ngaythanhtoan overflow">{{ngaythanhtoan}}</div>
 
-  <div class="yeucaukhachhang">{{yeucaukhachhang}}</div>
-  <div class="tuvansuachua">{{tuvansuachua}}</div>
+  <div class="yeucaukhachhang overflow flex">{{yeucaukhachhang}}</div>
+  <div class="tuvansuachua overflow flex">{{tuvansuachua}}</div>
 
   {{#each chitiet}}
-  <div class="cell ten row-{{@index}} row-ten">{{tenphutungvacongviec}}</div>
-  <div class="cell mapt row-{{@index}}">{{maphutung}}</div>
-  <div class="cell dongia row-{{@index}}">{{dongia}}</div>
-  <div class="cell sl row-{{@index}}">{{soluongphutung}}</div>
-  <div class="cell chietkhau row-{{@index}}">{{chietkhau}} %</div>
-  <div class="cell tienpt row-{{@index}}">{{tienpt}}</div>
-  <div class="cell tiencong row-{{@index}}">{{tiencong}}</div>
-  <div class="cell tong row-{{@index}}">{{tongtien}}</div>
-  <div class="cell tongTest row-{{@index}}">{{tongtongtien}}</div>
+  <div class="cell overflow flex ten row-{{@index}} row-ten">{{tenphutungvacongviec}}</div>
+  <div class="cell overflow flex mapt row-{{@index}}">{{maphutung}}</div>
+  <div class="cell overflow flex dongia row-{{@index}}">{{dongia}}</div>
+  <div class="cell overflow flex sl row-{{@index}}">{{soluongphutung}}</div>
+  <div class="cell overflow flex chietkhau row-{{@index}}">{{chietkhau}} %</div>
+  <div class="cell overflow flex tienpt row-{{@index}}">{{tienpt}}</div>
+  <div class="cell overflow flex tiencong row-{{@index}}">{{tiencong}}</div>
+  <div class="cell overflow flex tong row-{{@index}}">{{tongtien}}</div>
   {{/each}}
 
 
+  <div class="cell overflow flex row-20 tienpt overflow">{{tongtienpt}}</div>
+  <div class="cell overflow flex row-20 tiencong overflow">{{tongtiencong}}</div>
+  <div class="cell overflow flex row-20 tong overflow">{{tongtongtien}}</div>
+  <div class="kiemtralantoi overflow flex">{{kiemtralantoi}}</div>
+  <div class="ngayhen overflow flex">{{ngayhen}}</div>
 
-
-  <div class="cell row-20 tienpt">{{tongtienpt}}</div>
-  <div class="cell row-20 tiencong">{{tongtiencong}}</div>
-  <div class="cell row-20 tong">{{tongtongtien}}</div>
-  <div class="cell row-20 tongTest">{{tongtongtien}}</div>
-  <div class="kiemtralantoi">{{kiemtralantoi}}</div>
-  <div class="ngayhen">{{ngayhen}}</div>
-
-  <div class="tennvsuachua" id="tennvsuachua">{{tennvsuachua}}</div>
+  <div class="tennvsuachua overflow flex" id="tennvsuachua">{{tennvsuachua}}</div>
 
   <script>
     function format_momey(name) {
