--- a/MuoiCu_Server/views/exportsuachua.handlebars
+++ b/MuoiCu_Server/views/exportsuachua.handlebars
@@ -100,7 +100,14 @@
 
     .ngayban {
       position: absolute;
-      top: 130px;
+      top: 129px;
+      left: 780px;
+      width: 200px;
+    }
+
+    .ngaydukien {
+      position: absolute;
+      top: 152px;
       left: 780px;
       width: 200px;
     }
@@ -318,6 +325,7 @@
   <div class="somay overflow">{{somay}}</div>
   <div class="sokm overflow">{{sokm}}</div>
   <div class="ngayban overflow">{{ngayban}}</div>
+  <div class="ngaydukien overflow">{{ngaydukien}}</div>
   <div class="ngaythanhtoan overflow">{{ngaythanhtoan}}</div>
 
   <div class="yeucaukhachhang overflow flex">{{yeucaukhachhang}}</div>
