kiem tra lan toi 2.1.1

--- a/MuoiCu_Server/views/exportsuachua.handlebars
+++ b/MuoiCu_Server/views/exportsuachua.handlebars
@@ -309,6 +309,16 @@
       height: 30px;
       font-size: 22px;
     }
+
+    .sokmhen {
+      position: absolute;
+      top: 1225px;
+      left: 868px;
+      width: 156px;
+      height: 30px;
+      font-size: 22px;
+    }
+
   </style>
 </head>
 
@@ -349,6 +359,7 @@
   <div class="cell overflow flex row-20 tong overflow">{{tongtongtien}}</div>
   <div class="kiemtralantoi overflow flex">{{kiemtralantoi}}</div>
   <div class="ngayhen overflow flex">{{ngayhen}}</div>
+  <div class="sokmhen overflow flex">{{sokmhen}}</div>
 
   <div class="tennvsuachua overflow flex" id="tennvsuachua">{{tennvsuachua}}</div>
 
